--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
         <div id="game-board"></div>
 
+        <div id="combo-message" class="combo-message hidden"></div>
+        <div id="particles-container"></div>
+
         <div class="controls">
             <button id="new-game-btn">New Game</button>
         </div>
